--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -382,3 +382,36 @@ a.text-primary:hover {
         width: 100%;
     }
 }
+
+/* Изменение цвета текста заголовка аккордеона на зеленый при его раскрытии */
+.accordion-button:not(.collapsed) {
+    color: #157347; /* Зеленый цвет */
+    background-color: #e9f6ec; /* Светло-зеленый фон */
+    border-color: #157347; /* Зеленая граница */
+}
+
+/* Изменение цвета текста заголовка аккордеона в обычном состоянии */
+.accordion-button {
+    background-color: transparent; /* Прозрачный фон */
+    border-color: #157347; /* Зеленая граница */
+}
+
+/* Изменение цвета текста и иконки на зеленый при наведении */
+.accordion-button:hover {
+    color: #157347; /* Зеленый цвет текста */
+}
+
+/* Изменение цвета иконки раскрытия на зеленый */
+.accordion-button::after {
+    color: #157347; /* Зеленый цвет иконки */
+}
+
+/* Убираем синий фокус при нажатии */
+.accordion-button:focus {
+    box-shadow: none;
+}
+
+/* Цвет текста для открытого состояния */
+.accordion-button:not(.collapsed)::after {
+    color: #157347; /* Зеленая иконка */
+}
