--- a/public/assets/lib/bootstrap.css
+++ b/public/assets/lib/bootstrap.css
@@ -3135,8 +3135,8 @@ fieldset:disabled .btn {
 .btn-check:focus + .btn-success,
 .btn-success:focus {
     color: #fff;
-    background-color: #157347;
-    border-color: #146c43;
+    background-color: #00a884;
+    border-color: #00a884;
     box-shadow: 0 0 0 0.25rem rgba(60, 153, 110, 0.5);
 }
 .btn-check:checked + .btn-success,
@@ -3145,8 +3145,8 @@ fieldset:disabled .btn {
 .btn-success.active,
 .show > .btn-success.dropdown-toggle {
     color: #fff;
-    background-color: #146c43;
-    border-color: #13653f;
+    background-color: #00a884;
+    border-color: #00a884;
 }
 .btn-check:checked + .btn-success:focus,
 .btn-check:active + .btn-success:focus,
