--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,7 +3,6 @@
     /* Цвет фона #333 с 50% прозрачностью */
     padding: 15px 0;
     color: white;
-    
 }
 
 .header .logo img {
@@ -183,6 +182,36 @@
     .dropdown-submenu .dropdown-item {
         padding-left: 45px; /* Больше отступа для второго уровня подменю */
     }
+}
+
+.hero-section {
+    position: relative;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный фон */
+    z-index: 1;
+}
+
+.content {
+    position: relative;
+    z-index: 2;
+}
+
+.text-white {
+    color: #ffffff;
 }
 
 /* пульсирующая кнопка  */
